--- a/css/gluf.css
+++ b/css/gluf.css
@@ -1,3 +1,19 @@
+/* Table of contents
+––––––––––––––––––––––––––––––––––––––––––––––––––
+- Universal
+- Navigation
+- Navigation Mobile
+- about.html
+- work.html
+- project_detail.html
+- Responsive Styling
+*/
+
+
+
+/* Universal
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
 .scroll {
 }
 
@@ -11,23 +27,16 @@
   width: 100%;
 }
 
+.content{
+  margin-top: 50px;
+}
 
 
+/* Navigation
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 .name a{
   margin-left: 15%;
 }
-
-.card a{
-  border: none;
-}
-.card a:hover{
-  border: none;
-}
-
-.active {
-  border-bottom: 5px solid blue;
-}
-
 .name{
   margin-top: 5%;
 }
@@ -36,13 +45,8 @@
   cursor: default;
 }
 
-.about-description a{
-  font-weight: bolder;
-  border-bottom: 2px solid transparent;
-}
-.about-description a:hover{
-  font-weight: bolder;
-  border-bottom: 2px solid blue;
+.active {
+  border-bottom: 5px solid blue;
 }
 .name a:last-child{
   margin-left: 50px;
@@ -59,68 +63,21 @@
   line-height: 14rem;
 }
 
-
-.me img{
-  width: 100%;
+.show{
+ height: 100%;
+ opacity: 100%;
+ transition: .5s;
 }
 
-.content{
-  margin-top: 50px;
+.hide {
+  height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: .5s;
 }
 
-.thumbs img{
-  width: 90%;
-  transition: all .1s ease-in-out;
-  border-top: 10px solid transparent;
-}
-
-.thumbs img:hover{
-      border-top: 10px solid black;
-      transition: all .1s ease-in-out;
-      cursor: pointer;
-}
-
-.titles{
-  margin-bottom: 25px;
-}
-
-.titles p{
-  display: inline-block;
-  line-height: 0;
-  margin: 0;
-}
-.title{
-  font-weight: bold;
-}
-
-.intro{
-}
-
-.intro img{
-  width: 100%;
-}
-
-.project-detail{
-
-}
-
-.project-detail h1{
-  font-weight: bold;
-}
-
-.project-detail h2{
-  font-size: 2.2rem;
-}
-
-.gallery img{
-  width: 90%;
-}
-
-.outro img{
-  width: 100%;
-  margin-top: 5%;
-  margin-bottom: 5%;
-}
+/* Navigation Mobile
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .navMobile{
   display:none;
@@ -169,25 +126,90 @@
   transition: .1s;
 }
 
-
-
-.show{
- height: 100%;
- opacity: 100%;
- transition: .5s;
-}
-
-.hide {
-  height: 0;
-  opacity: 0;
-  overflow: hidden;
-  transition: .5s;
-}
-
 .mobileLink{
 }
 
+/* about.html
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.about-description a{
+  font-weight: bolder;
+  border-bottom: 2px solid transparent;
+}
+.about-description a:hover{
+  font-weight: bolder;
+  border-bottom: 2px solid blue;
+}
 
+/* work.html
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.card a{
+  border: none;
+}
+.card a:hover{
+  border: none;
+}
+
+
+.thumbs img{
+  width: 90%;
+  transition: all .1s ease-in-out;
+  border-top: 10px solid transparent;
+}
+
+.thumbs img:hover{
+      border-top: 10px solid black;
+      transition: all .1s ease-in-out;
+      cursor: pointer;
+}
+
+.titles{
+  margin-bottom: 25px;
+}
+
+.titles p{
+  display: inline-block;
+  line-height: 0;
+  margin: 0;
+}
+.title{
+  font-weight: bold;
+}
+
+/* project_detail.html
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.intro{
+}
+
+.intro img{
+  width: 100%;
+}
+
+.project-detail{
+
+}
+
+.project-detail h1{
+  font-weight: bold;
+}
+
+.project-detail h2{
+  font-size: 2.2rem;
+}
+
+.gallery img{
+  width: 90%;
+}
+
+.outro img{
+  width: 100%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+/* Responsive Styling
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 @media (max-width: 900px) {
 
   .name h1{
