--- a/css/gluf.css
+++ b/css/gluf.css
@@ -7,6 +7,7 @@
 - work.html
 - project_detail.html
 - Responsive Styling
+- Animations
 */
 
 
@@ -29,6 +30,7 @@
 
 .content{
   margin-top: 50px;
+  animation: .5s ease-in 0s 1 contentLoad;
 }
 
 
@@ -245,4 +247,16 @@
   }
 
 
+}
+
+/* Animations
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+@keyframes contentLoad {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
