--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,27 +1,30 @@
 // Variables
 
 // Set custom colors
-$teal: #1abc9c;
-$dark-blue: #2c3e50;
+$dry-soil:#716554;
+$blue:#3B6E71;
+
+$sage-green: #84A492;
+
 
 // Override Bootstrap primary and secondary colors
-$primary: $teal;
-$secondary: $dark-blue;
+$primary: $sage-green;
+$secondary: $blue;
 
 // Override Bootstrap font variables
-$font-family-sans-serif: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI",
+$font-family-sans-serif: "Source Code", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-$headings-font-family: "Montserrat", -apple-system, BlinkMacSystemFont,
+$headings-font-family: "Lato", -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-$headings-font-weight: 700;
+$headings-font-weight: 600;
 
 // Override Bootstrap border variables
 $border-width: 0.125rem;
-$border-radius: 0.5rem;
-$border-radius-lg: 0.75rem;
-$border-radius-sm: 0.25rem;
+$border-radius: 0;
+$border-radius-lg: 0;
+$border-radius-sm: 0;
 
 // Override Bootstrap input/button variables
 $input-btn-border-width: $border-width;
