--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -65,42 +65,42 @@ html(lang='en')
                             .portfolio-item-caption.d-flex.align-items-center.justify-content-center.h-100.w-100
                                 .portfolio-item-caption-content.text-center.text-white
                                     i.fas.fa-plus.fa-2x
-                            img.img-fluid(src='assets/img/portfolio/temp.png', alt='')
+                            img.img-fluid(src='assets/img/portfolio/visual-design.png', alt='')
                     // Portfolio Item 2
                     .col-md-6.col-lg-4.mb-5
                         .portfolio-item.mx-auto(data-toggle='modal', data-target='#portfolioModal2')
                             .portfolio-item-caption.d-flex.align-items-center.justify-content-center.h-100.w-100
                                 .portfolio-item-caption-content.text-center.text-white
                                     i.fas.fa-plus.fa-2x
-                            img.img-fluid(src='assets/img/portfolio/temp.png', alt='')
+                            img.img-fluid(src='assets/img/portfolio/ux-design.png', alt='')
                     // Portfolio Item 3
                     .col-md-6.col-lg-4.mb-5
                         .portfolio-item.mx-auto(data-toggle='modal', data-target='#portfolioModal3')
                             .portfolio-item-caption.d-flex.align-items-center.justify-content-center.h-100.w-100
                                 .portfolio-item-caption-content.text-center.text-white
                                     i.fas.fa-plus.fa-2x
-                            img.img-fluid(src='assets/img/portfolio/temp.png', alt='')
+                            img.img-fluid(src='assets/img/portfolio/printmaking.png', alt='')
                     // Portfolio Item 4
                     .col-md-6.col-lg-4.mb-5.mb-lg-0
                         .portfolio-item.mx-auto(data-toggle='modal', data-target='#portfolioModal4')
                             .portfolio-item-caption.d-flex.align-items-center.justify-content-center.h-100.w-100
                                 .portfolio-item-caption-content.text-center.text-white
                                     i.fas.fa-plus.fa-2x
-                            img.img-fluid(src='assets/img/portfolio/temp.png', alt='')
+                            img.img-fluid(src='assets/img/portfolio/video.png', alt='')
                     // Portfolio Item 5
                     .col-md-6.col-lg-4.mb-5.mb-md-0
                         .portfolio-item.mx-auto(data-toggle='modal', data-target='#portfolioModal5')
                             .portfolio-item-caption.d-flex.align-items-center.justify-content-center.h-100.w-100
                                 .portfolio-item-caption-content.text-center.text-white
                                     i.fas.fa-plus.fa-2x
-                            img.img-fluid(src='assets/img/portfolio/temp.png', alt='')
+                            img.img-fluid(src='assets/img/portfolio/headset.png', alt='')
                     // Portfolio Item 6
                     .col-md-6.col-lg-4
                         .portfolio-item.mx-auto(data-toggle='modal', data-target='#portfolioModal6')
                             .portfolio-item-caption.d-flex.align-items-center.justify-content-center.h-100.w-100
                                 .portfolio-item-caption-content.text-center.text-white
                                     i.fas.fa-plus.fa-2x
-                            img.img-fluid(src='assets/img/portfolio/temp.png', alt='')
+                            img.img-fluid(src='assets/img/portfolio/mouse.png', alt='')
 
         // About Section
         section#about.page-section.bg-primary.text-white.mb-0
@@ -197,14 +197,13 @@ html(lang='en')
                             .row.justify-content-center
                                 .col-lg-8
                                     // Portfolio Modal - Title
-                                    h2.portfolio-modal-title.text-secondary.text-uppercase.mb-5#portfolioModal1Label Log Cabin
+                                    h2.portfolio-modal-title.text-secondary.text-uppercase.mb-5#portfolioModal1Label Visual Design
                                     // Portfolio Modal - Image
-                                    img.img-fluid.rounded.mb-5(src='assets/img/portfolio/temp.png', alt='')
+                                    img.img-fluid.rounded.mb-5(src='assets/img/portfolio/visual-design.png', alt='')
                                     // Portfolio Modal - Text
                                     p.mb-5
                                         | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
                                     button.btn.btn-primary(data-dismiss='modal')
-                                        i.fas.fa-times.fa-fw
                                         | Close Window
         // Portfolio Modal 2
         #portfolioModal2.portfolio-modal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='portfolioModal2Label', aria-hidden='true')
@@ -218,14 +217,13 @@ html(lang='en')
                             .row.justify-content-center
                                 .col-lg-8
                                     // Portfolio Modal - Title
-                                    h2.portfolio-modal-title.text-secondary.text-uppercase.mb-5#portfolioModal2Label Tasty Cake                                    
+                                    h2.portfolio-modal-title.text-secondary.text-uppercase.mb-5#portfolioModal2Label UX Design                                    
                                     // Portfolio Modal - Image
-                                    img.img-fluid.rounded.mb-5(src='assets/img/portfolio/temp.png', alt='')
+                                    img.img-fluid.rounded.mb-5(src='assets/img/portfolio/ux-design.png', alt='')
                                     // Portfolio Modal - Text
                                     p.mb-5
                                         | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
                                     button.btn.btn-primary(data-dismiss='modal')
-                                        i.fas.fa-times.fa-fw
                                         | Close Window
         // Portfolio Modal 3
         #portfolioModal3.portfolio-modal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='portfolioModal3Label', aria-hidden='true')
@@ -239,14 +237,13 @@ html(lang='en')
                             .row.justify-content-center
                                 .col-lg-8
                                     // Portfolio Modal - Title
-                                    h2.portfolio-modal-title.text-secondary.text-uppercase.mb-5#portfolioModal3Label Circus Tent
+                                    h2.portfolio-modal-title.text-secondary.text-uppercase.mb-5#portfolioModal3Label Printmaking
                                     // Portfolio Modal - Image
-                                    img.img-fluid.rounded.mb-5(src='assets/img/portfolio/temp.png', alt='')
+                                    img.img-fluid.rounded.mb-5(src='assets/img/portfolio/printmaking.png', alt='')
                                     // Portfolio Modal - Text
                                     p.mb-5
                                         | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
                                     button.btn.btn-primary(data-dismiss='modal')
-                                        i.fas.fa-times.fa-fw
                                         | Close Window
         // Portfolio Modal 4
         #portfolioModal4.portfolio-modal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='portfolioModal4Label', aria-hidden='true')
@@ -260,14 +257,13 @@ html(lang='en')
                             .row.justify-content-center
                                 .col-lg-8
                                     // Portfolio Modal - Title
-                                    h2.portfolio-modal-title.text-secondary.text-uppercase.mb-5#portfolioModal4Label Controller                                    
+                                    h2.portfolio-modal-title.text-secondary.text-uppercase.mb-5#portfolioModal4Label Video + Animation                                    
                                     // Portfolio Modal - Image
-                                    img.img-fluid.rounded.mb-5(src='assets/img/portfolio/temp.png', alt='')
+                                    img.img-fluid.rounded.mb-5(src='assets/img/portfolio/video.png', alt='')
                                     // Portfolio Modal - Text
                                     p.mb-5
                                         | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
                                     button.btn.btn-primary(data-dismiss='modal')
-                                        i.fas.fa-times.fa-fw
                                         | Close Window
         // Portfolio Modal 5
         #portfolioModal5.portfolio-modal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='portfolioModal5Label', aria-hidden='true')
@@ -281,14 +277,13 @@ html(lang='en')
                             .row.justify-content-center
                                 .col-lg-8
                                     // Portfolio Modal - Title
-                                    h2.portfolio-modal-title.text-secondary.text-uppercase.mb-5#portfolioModal5Label Locked Safe                                    
+                                    h2.portfolio-modal-title.text-secondary.text-uppercase.mb-5#portfolioModal5Label Music                                 
                                     // Portfolio Modal - Image
-                                    img.img-fluid.rounded.mb-5(src='assets/img/portfolio/temp.png', alt='')
+                                    img.img-fluid.rounded.mb-5(src='assets/img/portfolio/headset.png', alt='')
                                     // Portfolio Modal - Text
                                     p.mb-5
                                         | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
                                     button.btn.btn-primary(data-dismiss='modal')
-                                        i.fas.fa-times.fa-fw
                                         | Close Window
         // Portfolio Modal 6
         #portfolioModal6.portfolio-modal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='portfolioModal6Label', aria-hidden='true')
@@ -302,14 +297,13 @@ html(lang='en')
                             .row.justify-content-center
                                 .col-lg-8
                                     // Portfolio Modal - Title
-                                    h2.portfolio-modal-title.text-secondary.text-uppercase.mb-5#portfolioModal6Label Submarine                                    
+                                    h2.portfolio-modal-title.text-secondary.text-uppercase.mb-5#portfolioModal6Label  Front End Web Dev                                 
                                     // Portfolio Modal - Image
-                                    img.img-fluid.rounded.mb-5(src='assets/img/portfolio/temp.png', alt='')
+                                    img.img-fluid.rounded.mb-5(src='assets/img/portfolio/mouse.png', alt='')
                                     // Portfolio Modal - Text
                                     p.mb-5
                                         | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
                                     button.btn.btn-primary(data-dismiss='modal')
-                                        i.fas.fa-times.fa-fw
                                         | Close Window
 
         // Bootstrap core JS
