--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -50,6 +50,7 @@ html(lang='en')
                 h1.masthead-heading.text-uppercase.mb-5 Matthew Gluf
                 // Masthead Subheading
                 p.masthead-subheading.font-weight-light.mb-0.text-uppercase Graphic Artist - Web Designer - Illustrator
+                a.btn.btn-primary.btn-xl.mt-3(href='https://mcgluf.com/live-web-demo') Return To Portfolio
 
         // Portfolio Section
         section#portfolio.page-section.portfolio
@@ -114,7 +115,7 @@ html(lang='en')
                             | My name is Matthew Gluf. I believe that the internet can empower people and their ideas. As a designer, my purpose is to bring those ideas into reality. Through technical web knowledge, practical coding experience, graphic design, and basic intuitive marketing strategies, let me bring your dream to the web.
                 // About Section Button
                 .text-center.mt-4
-                    a.btn.btn-xl.btn-outline-light(href='https://startbootstrap.com/themes/freelancer/')
+                    a.btn.btn-xl.btn-outline-light(href='https://drive.google.com/file/d/1llqPI0HxizK88LH31kH9imWK8FzTM-6A/view?usp=sharing' target='_blank')
                         i.fas.fa-download.mr-2
                         | Resume
 
@@ -171,8 +172,7 @@ html(lang='en')
                     .col-lg-4
                         h4.text-uppercase.mb-3 Credits
                         p.lead.mb-0
-                            | Freelance is a free to use, MIT licensed Bootstrap theme created by 
-                            a(href='http://startbootstrap.com') Start Bootstrap
+                            | Freelance is a free to use, MIT licensed Bootstrap theme.
                             | .
         // Copyright Section
         div.copyright.py-4.text-center.text-white
