--- a/style.css
+++ b/style.css
@@ -10700,6 +10700,11 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   padding: 0 0.75rem;
 }
 
+@media (max-width: 1199.98px) {
+  .nav-item {
+    padding: 0 0.25rem;
+  }
+}
 .nav-link {
   padding: 0.5rem 1rem;
   color: #07336E;
@@ -10908,7 +10913,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   width: 100%;
   margin: auto;
   z-index: 100;
-  transition: transform 0.5s, opacity 0.5s, z-index 0.5s;
+  transition: transform 0.5s ease-out, opacity 0.5s ease-out, z-index 0.5s;
 }
 
 /* Display the initial item and bring it to the front using 'z-index'. These styles also apply to the 'active' item. */
@@ -10989,6 +10994,16 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 .caption {
   margin-top: 1rem;
   color: gray;
+}
+
+.auto-scroll .caption {
+  display: none;
+}
+.auto-scroll .carousel__button--next, .auto-scroll .carousel__button--prev {
+  display: none;
+}
+.auto-scroll .carousel__photo {
+  transition: transform 0.75s ease-out, opacity 1s ease-out, z-index 0.75s;
 }
 
 .project-nav {
